@@ -1,6 +1,9 @@
+import clients.OrderClient;
 import io.qameta.allure.Step;
+import io.qameta.allure.junit4.DisplayName;
 import io.restassured.RestAssured;
 import io.restassured.response.Response;
+import models.Order;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -44,28 +47,24 @@ public class OrderTest {
     @Parameterized.Parameters
     public static Object[][] orderData() {
         return new Object[][] {
-                {"Пчела", "Полосатая", "ул. Сотовая, д.100, улей 5", "4", "71471471471", 5, "01.11.2024", "Привозите скорее", List.of("Black")},
-                {"Пчела", "Рыжая", "ул. Сотовая, д.100, улей 8", "4", "71471471471", 5, "01.11.2024", "Привозите скорее", List.of("Gray")},
-                {"Пчела", "Полосатая", "ул. Сотовая, д.100, улей 5", "4", "71471471471", 5, "01.11.2024", "Привозите скорее", List.of("Black", "Gray")},
-                {"Пчела", "Полосатая", "ул. Сотовая, д.100, улей 5", "4", "71471471471", 5, "01.11.2024", "Привозите скорее", Collections.emptyList()},
+                {"Пчела", "Полосатая", "ул. Сотовая, д.100, улей 5", "4", "71471471471", 5, "03.11.2024", "Привозите скорее", List.of("Black")},
+                {"Пчела", "Рыжая", "ул. Сотовая, д.100, улей 8", "4", "71471471471", 5, "03.11.2024", "Привозите скорее", List.of("Gray")},
+                {"Пчела", "Полосатая", "ул. Сотовая, д.100, улей 5", "4", "71471471471", 5, "03.11.2024", "Привозите скорее", List.of("Black", "Gray")},
+                {"Пчела", "Полосатая", "ул. Сотовая, д.100, улей 5", "4", "71471471471", 5, "03.11.2024", "Привозите скорее", Collections.emptyList()},
         };
     }
 
     @Test
-    @Step("Send POST request to /api/v1/orders and check that Status Code is 201 and track is not null")
+    @DisplayName("Send POST request to /api/v1/orders and check that Status Code is 201 and track is not null")
     public void CreationOfOrder () {
 
         Order order = new Order(firstName, lastName, address, metroStation, phone, rentTime, deliveryDate, comment, color);
+        OrderClient orderClient = new OrderClient();
 
-        Response response = given()
-                .header("Content-type", "application/json")
+        Response response = orderClient.create(order);
+        response.then().assertThat().statusCode(201)
                 .and()
-                .body(order)
-                .when()
-                .post("/api/v1/orders");
-        response.then().assertThat().body("track", notNullValue())
-                .and()
-                .statusCode(201);
+                .body("track", notNullValue());
 
     }
 
